infra/apps/trellify/base/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trellify-client
  labels:
    app: trellify-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trellify-client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: trellify-client
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
      containers:
        - name: client
          image: ghcr.io/baoduong254/trellify-client
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
